--- a/youbot/experiments/knowledge_base/7_local_ner_gpt_resolution/7.ipynb
+++ b/youbot/experiments/knowledge_base/7_local_ner_gpt_resolution/7.ipynb
@@ -137,25 +137,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# clashing entity types\n",
-    "labels_grouped = grouped_entities_df.groupby([\"name\"]).agg({\"label\": lambda x: list(x)}).reset_index()\n",
+    "labels_grouped = grouped_entities_df.groupby([\"name\"]).agg({\"label\": lambda x: list(x), \"fact\": lambda x: [item for sublist in x for item in sublist]}).reset_index()\n",
     "clashing_entity_labels = labels_grouped[labels_grouped[\"label\"].apply(lambda x: len(x) > 1)]\n",
     "\n",
     "\n",
-    "rels_grouped = grouped_relations_df.groupby([\"dep_name\", \"dest_name\"]).agg({\"rel\": lambda x: list(x)}).reset_index()\n",
+    "rels_grouped = grouped_relations_df.groupby([\"dep_name\", \"dest_name\"]).agg({\"rel\": lambda x: list(x), \"fact\": lambda x: [item for sublist in x for item in sublist]}).reset_index()\n",
     "clashing_rels = rels_grouped[rels_grouped[\"rel\"].apply(lambda x: len(x) > 1)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "from pandas import Series\n",
+    "# resolve entities\n",
+    "import outlines\n",
+    "import outlines.models\n",
+    "from pandas import Series\n",
+    "\n",
+    "model = outlines.models.openai(\"gpt-4\")\n",
+    "\n",
+    "\n",
+    "def pick_winning_label(row: Series) -> str:\n",
+    "    labels = row[\"label\"]\n",
+    "    name = row[\"name\"]\n",
+    "    facts = \"\\n\".join(row[\"fact\"])\n",
+    "\n",
+    "    prompt = f\"\"\"You are an entity resolution assistant. \n",
+    "    You must classify the entity with name = {name}\n",
+    "    \n",
+    "    Use both your inherent knowledge, and these facts derived from chat logs:\n",
+    "    {facts}    \n",
+    "    \"\"\"\n",
+    "\n",
+    "    generator = outlines.generate.choice(model, labels)\n",
+    "    answer = generator(prompt)\n",
+    "    print(f\"{name}: Choices = {labels}. WINNER = {answer}\")\n",
+    "    return answer\n",
+    "\n",
+    "\n",
+    "new_df = clashing_entity_labels.apply(pick_winning_label, axis=1)"
+   ]
   }
  ],
  "metadata": {
