--- a/youbot/experiments/knowledge_base/7_local_ner_gpt_resolution/7.ipynb
+++ b/youbot/experiments/knowledge_base/7_local_ner_gpt_resolution/7.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,30 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 193/193 [04:00<00:00,  1.25s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from time import sleep\n",
+    "from youbot.experiments.pickler import pickled_cache\n",
     "from youbot.store import Store\n",
     "\n",
-    "docs = Store().get_archival_messages()\n",
-    "\n",
-    "with (open('data.pkl', 'wb')) as f:\n",
-    "    pd.DataFrame(docs).to_pickle(f)\n",
-    "    \n",
     "\n",
     "\n",
-    "entities_df = pd.DataFrame(columns=[\"name\", \"label\", \"fact\"])\n",
-    "relations_df = pd.DataFrame(columns=[\"dep_name\", \"dep_label\", \"dest_name\", \"dest_label\", \"rel\", \"fact\"])\n",
+    "\n",
+    "@pickled_cache\n",
+    "def get_data():\n",
+    "    docs = Store().get_archival_messages()\n",
+    "    return pd.DataFrame(docs)\n",
+    "\n",
     "\n",
     "\n",
     "entities_rows = []\n",
@@ -119,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,18 +144,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "import os\n",
+    "import huggingface_hub\n",
     "from pandas import Series\n",
     "# resolve entities\n",
     "import outlines\n",
     "import outlines.models\n",
     "from pandas import Series\n",
-    "\n",
-    "model = outlines.models.openai(\"gpt-4\")\n",
+    "huggingface_hub.login(token=os.environ['HF_TOKEN'])\n",
+    "model = outlines.models.transformers(\"mistralai/Mistral-7B-Instruct-v0.2\")\n",
     "\n",
     "\n",
     "def pick_winning_label(row: Series) -> str:\n",
