--- a/youbot/experiments/knowledge_base/7_local_ner_gpt_resolution/7.ipynb
+++ b/youbot/experiments/knowledge_base/7_local_ner_gpt_resolution/7.ipynb
@@ -18,7 +18,6 @@
     "import spacy_llm\n",
     "from spacy_llm.util import assemble\n",
     "import spacy\n",
-    "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "\n",
     "\n",
@@ -44,10 +43,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from time import sleep\n",
     "from youbot.experiments.pickler import pickled_cache\n",
     "from youbot.store import Store\n",
-    "\n",
+    "import pandas as pd\n",
     "\n",
     "\n",
     "\n",
@@ -57,49 +57,59 @@
     "    return pd.DataFrame(docs)\n",
     "\n",
     "\n",
-    "\n",
-    "entities_rows = []\n",
-    "relations_rows = []\n",
-    "for doc in tqdm(docs):\n",
-    "    enriched_doc = nlp(doc)\n",
-    "    sleep(0.1) # sleep for openai\n",
-    "    ents = enriched_doc.ents\n",
-    "    for ent in ents:\n",
-    "        entities_rows.append({\"name\": ent.text, \"label\": ent.label_, \"fact\": doc})  # type: ignore\n",
-    "    for rel in enriched_doc._.rel:\n",
-    "        dep_name = ents[rel.dep].text\n",
-    "        dep_label = ents[rel.dep].label_\n",
-    "        dest_name = ents[rel.dest].text\n",
-    "        dest_label = ents[rel.dest].label_\n",
-    "\n",
-    "        # ignore self relations\n",
-    "        if (dep_name, dep_label) == (dest_name, dest_label):\n",
-    "            continue\n",
-    "\n",
-    "        # ignore dates\n",
-    "        if dep_label == \"DATE\" or dest_label == \"DATE\":\n",
-    "            continue\n",
-    "\n",
-    "        relations_rows.append(\n",
-    "            {\n",
-    "                \"dep_name\": dep_name,\n",
-    "                \"dep_label\": dep_label,\n",
-    "                \"dest_name\": dest_name,\n",
-    "                \"dest_label\": dest_label,\n",
-    "                \"rel\": rel.relation,\n",
-    "                \"fact\": doc,\n",
-    "            }\n",
-    "        )\n",
-    "\n",
-    "\n",
-    "entities_df = pd.DataFrame(entities_rows)\n",
-    "relations_df = pd.DataFrame(relations_rows)\n",
-    "\n",
-    "with open('entities.pkl', 'wb') as f:\n",
-    "    entities_df.to_pickle(f)\n",
+    "if os.path.exists('entities.pkl') and os.path.exists('relations.pkl'):\n",
+    "    with open('entities.pkl', 'rb') as f:\n",
+    "        entities_df = pd.read_pickle(f)\n",
+    "    with open('relations.pkl', 'rb') as f:\n",
+    "        relations_df = pd.read_pickle(f)\n",
     "    \n",
-    "with open('relations.pkl', 'wb') as f:\n",
-    "    relations_df.to_pickle(f)"
+    "else:\n",
+    "    docs_df = get_data()\n",
+    "    docs = docs_df[\"body\"].tolist()\n",
+    "    \n",
+    "    \n",
+    "    entities_rows = []\n",
+    "    relations_rows = []\n",
+    "    for doc in tqdm(docs):\n",
+    "        enriched_doc = nlp(doc)\n",
+    "        sleep(0.1) # sleep for openai\n",
+    "        ents = enriched_doc.ents\n",
+    "        for ent in ents:\n",
+    "            entities_rows.append({\"name\": ent.text, \"label\": ent.label_, \"fact\": doc})  # type: ignore\n",
+    "        for rel in enriched_doc._.rel:\n",
+    "            dep_name = ents[rel.dep].text\n",
+    "            dep_label = ents[rel.dep].label_\n",
+    "            dest_name = ents[rel.dest].text\n",
+    "            dest_label = ents[rel.dest].label_\n",
+    "\n",
+    "            # ignore self relations\n",
+    "            if (dep_name, dep_label) == (dest_name, dest_label):\n",
+    "                continue\n",
+    "\n",
+    "            # ignore dates\n",
+    "            if dep_label == \"DATE\" or dest_label == \"DATE\":\n",
+    "                continue\n",
+    "\n",
+    "            relations_rows.append(\n",
+    "                {\n",
+    "                    \"dep_name\": dep_name,\n",
+    "                    \"dep_label\": dep_label,\n",
+    "                    \"dest_name\": dest_name,\n",
+    "                    \"dest_label\": dest_label,\n",
+    "                    \"rel\": rel.relation,\n",
+    "                    \"fact\": doc,\n",
+    "                }\n",
+    "            )\n",
+    "\n",
+    "\n",
+    "    entities_df = pd.DataFrame(entities_rows)\n",
+    "    relations_df = pd.DataFrame(relations_rows)\n",
+    "\n",
+    "    with open('entities.pkl', 'wb') as f:\n",
+    "        entities_df.to_pickle(f)\n",
+    "        \n",
+    "    with open('relations.pkl', 'wb') as f:\n",
+    "        relations_df.to_pickle(f)"
    ]
   },
   {
