--- a/youbot/experiments/knowledge_base/8_35_for_everything/8.ipynb
+++ b/youbot/experiments/knowledge_base/8_35_for_everything/8.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "\n",
     "\n",
     "nlp = spacy.load(\"en_core_web_md\")\n",
-    "nlp = assemble(\"7.cfg\")"
+    "nlp = assemble(\"8.cfg\")"
    ]
   },
   {
@@ -39,9 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/193 [00:00<?, ?it/s]0.00s - Debugger warning: It seems that frozen modules are being used, which may\n",
+      "0.00s - make the debugger miss breakpoints. Please pass -Xfrozen_modules=off\n",
+      "0.00s - to python to disable frozen modules.\n",
+      "0.00s - Note: Debugging will proceed. Set PYDEVD_DISABLE_FILE_VALIDATION=1 to disable this validation.\n",
+      " 13%|█▎        | 25/193 [03:16<12:06,  4.32s/it]  "
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from time import sleep\n",
@@ -65,7 +77,7 @@
     "    \n",
     "else:\n",
     "    docs_df = get_data()\n",
-    "    docs = docs_df[\"body\"].tolist()\n",
+    "    docs = docs_df[0].tolist()\n",
     "    \n",
     "    \n",
     "    entities_rows = []\n",
