--- a/youbot/experiments/knowledge_base/11_llm_server/11.ipynb
+++ b/youbot/experiments/knowledge_base/11_llm_server/11.ipynb
@@ -3373,6 +3373,7 @@
     "\n",
     "# refine entity labels\n",
     "import os\n",
+    "import re\n",
     "from openai import OpenAI\n",
     "import pandas as pd\n",
     "import random\n",
@@ -3418,31 +3419,21 @@
     "name_df = entities_df.groupby(\"name\")[\"fact\"].apply(lambda x: pd.unique(x)).reset_index()\n",
     "\n",
     "\n",
-    "def chunks(l, n): \n",
-    "    # looping till length l \n",
-    "    for i in range(0, len(l), n):  \n",
-    "        yield l[i:i + n] \n",
-    "# for all entities labeled as person, disambiguate between pets and people \n",
-    "def refine_labels(row: pd.Series) -> Tuple[str, Dict[str, int]]:\n",
-    "    name = row[\"name\"]\n",
-    "    fact_set = row[\"fact\"]\n",
+    "entity_rows = []\n",
+    "for _, row in entities_df.iterrows():\n",
+    "    name = row['name']\n",
+    "    fact_set = row['fact']\n",
     "    \n",
-    "    # short circuit hotkey\n",
-    "    if name == 'Tom':\n",
-    "        return (\"PERSON\", {'PERSON': 100})\n",
-    "   \n",
-    "    fact_list = list(fact_set)\n",
-    "    print(f\"considering name {name}. Number of facts: {len(fact_list)}\")\n",
-    "    \n",
-    "    \n",
-    "    label_choices = VALID_LABELS.copy()\n",
-    "    \n",
-    "    \n",
-    "    random.shuffle(fact_list)\n",
-    "    random.shuffle(label_choices)\n",
-    "    labels_str = \", \".join(label_choices)\n",
-    "    candidates = {}\n",
-    "    for fact in fact_list:\n",
+    "    for fact in fact_set:\n",
+    "        if name == 'Tom':\n",
+    "            entity_rows.append({\"name\": name, 'label': 'PERSON', \"fact\": fact, 'score': 100})\n",
+    "            continue\n",
+    "\n",
+    "        label_choices = VALID_LABELS.copy()\n",
+    "        random.shuffle(label_choices)\n",
+    "        labels_str = \", \".join(label_choices)\n",
+    "        candidates = {}\n",
+    "        \n",
     "        prompt = f\"\"\"You are an entity resolution assistant. \n",
     "        You must classify the entity with name = {name}\n",
     "        \n",
@@ -3452,7 +3443,9 @@
     "        Use both your inherent knowledge, and this facts derived from chat logs:\n",
     "        {fact}\n",
     "        \n",
-    "        Your response should begin with just one word from the following choices: {labels_str}, then should follow with a short explanation of your reasoning.\n",
+    "        Your response should begin with just one word from the following choices: {labels_str}.\n",
+    "        Then, a score from 1 to 100, where 100 is the most confident and 1.\n",
+    "        Then should follow with a short explanation of your reasoning.\n",
     "        \"\"\"\n",
     "        \n",
     "        response = client.chat.completions.create(model=model, messages=[{\"role\": \"user\", \"content\": prompt}]).choices[0].message.content\n",
@@ -3460,7 +3453,7 @@
     "        print(f\"***\\nname: {name}\\n\\nfact: {fact}\\n\\nresponse: {response}\\n\\n***\\n\")\n",
     "        \n",
     "        # whichever label appears first wins\n",
-    "        winner = None\n",
+    "        winner = 'None'\n",
     "        min_idx = float('inf')\n",
     "        for label in label_choices:\n",
     "            if label in response:\n",
@@ -3468,10 +3461,12 @@
     "                if idx < min_idx:\n",
     "                    min_idx = idx\n",
     "                    winner = label\n",
-    "        if winner:\n",
-    "            candidates[winner] = candidates.get(winner, 0) + 1\n",
-    "    max_votes = 0\n",
-    "    winner = \"None\"\n",
+    "        \n",
+    "        try:\n",
+    "            score = int(re.search(r'\\d+', response).group())\n",
+    "        except AttributeError:\n",
+    "            score = 0\n",
+    "            \n",
     "    for label, votes in candidates.items():\n",
     "        if votes > max_votes:\n",
     "            max_votes = votes\n",
