--- a/youbot/experiments/knowledge_base/11_llm_server/11.ipynb
+++ b/youbot/experiments/knowledge_base/11_llm_server/11.ipynb
@@ -3407,8 +3407,6 @@
     "    \"TIME\"\n",
     "]\n",
     "\n",
-    "\n",
-    "\n",
     "# discard entities with any of the discard labels\n",
     "entities_df = entities_df[~entities_df[\"label\"].isin(DISCARD_LABELS)]\n",
     "\n",
@@ -3420,7 +3418,7 @@
     "\n",
     "\n",
     "entity_rows = []\n",
-    "for _, row in entities_df.iterrows():\n",
+    "for _, row in tqdm(entities_df.iterrows()):\n",
     "    name = row['name']\n",
     "    fact_set = row['fact']\n",
     "    \n",
@@ -3467,17 +3465,10 @@
     "        except AttributeError:\n",
     "            score = 0\n",
     "            \n",
-    "    for label, votes in candidates.items():\n",
-    "        if votes > max_votes:\n",
-    "            max_votes = votes\n",
-    "            winner = label\n",
-    "    return (winner, candidates)\n",
-    "        \n",
-    "tqdm.pandas()\n",
-    "        \n",
-    "\n",
-    "name_df['label'] = name_df.progress_apply(refine_labels, axis=1)\n",
+    "        entity_rows.append({\"name\": name, 'label': winner, \"fact\": fact, 'score': score})\n",
+    "            \n",
     "with open('refined_labels.pkl', 'wb') as f:\n",
+    "    pd.DataFrame(entity_rows).to_pickle(f)\n",
     "    name_df.to_pickle(f)\n",
     "\n"
    ]
