--- a/youbot/experiments/knowledge_base/11_llm_server/11.ipynb
+++ b/youbot/experiments/knowledge_base/11_llm_server/11.ipynb
@@ -326,11 +326,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "evaluation relationship between Justina and Tom\n",
+      "{'entity_1': 'Justina', 'entity_2': 'Tom', 'relationship': 'IS_ROMANTIC_PARTNER_OF', 'fact': 'In late March 2024, Tom started working on personal vows for Justina, indicating an upcoming special occasion or a renewed commitment in their relationship.', 'score': 80}\n",
+      "evaluation relationship between Tom and Justina\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "12it [01:02,  5.25s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'entity_1': 'Tom', 'entity_2': 'Justina', 'relationship': 'IS_ROMANTIC_PARTNER_OF', 'fact': 'In late March 2024, Tom started working on personal vows for Justina, indicating an upcoming special occasion or a renewed commitment in their relationship.', 'score': 80}\n",
+      "evaluation relationship between Sam and Elroy\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
+    "from tqdm import tqdm\n",
+    "import os\n",
+    "from openai import OpenAI\n",
+    "import random\n",
     "\n",
     "\n",
     "VALID_RELATIONSHIPS = {\n",
@@ -358,6 +394,11 @@
     "    ]\n",
     "}\n",
     "\n",
+    "os.environ['OPENAI_BASE_URL'] = \"http://localhost:1234/v1\"\n",
+    "os.environ['OPENAI_API_KEY'] = \"lm-studio\"\n",
+    "client = OpenAI()\n",
+    "model = client.models.list().data[0].id\n",
+    "\n",
     "resolve_entities = pd.read_pickle('refined_labels.pkl')['name']\n",
     "# first element in the tuple is the label\n",
     "resolved_labels = pd.read_pickle('refined_labels.pkl')['label'].apply(lambda x: x[0])\n",
@@ -379,13 +420,13 @@
     "            label_1 = entity_with_labels[entity_with_labels[\"name\"] == entity_1][\"label\"].values[0]\n",
     "            label_2 = entity_with_labels[entity_with_labels[\"name\"] == entity_2][\"label\"].values[0]\n",
     "            \n",
-    "            print(f'evaluation relationship between {entity_1} and {entity_2}')\n",
-    "            \n",
-    "            \n",
     "            relationship_choices = VALID_RELATIONSHIPS.get((label_1, label_2), [])\n",
     "            if len(relationship_choices) == 0:\n",
-    "                print(f'no classification available for {label_1} and {label_2}')\n",
     "                continue\n",
+    "            \n",
+    "            print(f'evaluation relationship between {entity_1} and {entity_2}')\n",
+    "            \n",
+    "            random.shuffle(relationship_choices)\n",
     "            \n",
     "            prompt = f\"\"\"You are an entity resolution assistant. \n",
     "            You must classify the relationship between two entities:\n",
