--- a/youbot/experiments/knowledge_base/11_llm_server/11.ipynb
+++ b/youbot/experiments/knowledge_base/11_llm_server/11.ipynb
@@ -217,31 +217,28 @@
     "    \"EVENT\"\n",
     "]\n",
     "\n",
-    "DISCARD_LABELS = [\n",
+    "TRUST_LABELS = [\n",
     "    \"CARDINAL\",\n",
     "    \"DATE\",\n",
     "    \"TIME\"\n",
     "]\n",
     "\n",
-    "# discard entities with any of the discard labels\n",
-    "entities_df = entities_df[~entities_df[\"label\"].isin(DISCARD_LABELS)]\n",
-    "\n",
-    "# get list of unique labels:\n",
-    "unique_labels = entities_df[\"name\"].unique()\n",
-    "\n",
-    "# new dataframe, with a name column and a facts column, which contains the array of facts\n",
-    "name_df = entities_df.groupby(\"name\")[\"fact\"].apply(lambda x: pd.unique(x)).reset_index()\n",
-    "\n",
-    "\n",
     "entity_rows = []\n",
     "for _, row in tqdm(entities_df.iterrows()):\n",
     "    name = row['name']\n",
     "    fact = row['fact']\n",
+    "    prev_label = row['label']\n",
     "    \n",
     "\n",
     "    if name == 'Tom':\n",
-    "        entity_rows.append({\"name\": name, 'label': 'PERSON', \"fact\": fact, 'score': 100})\n",
+    "        entity_rows.append({\"name\": name, 'label': 'PERSON', \"fact\": fact, 'score': 100, 'llm_response': 'skipping'})\n",
     "        continue\n",
+    "    elif name == 'Sam':\n",
+    "        entity_rows.append({\"name\": name, 'label': 'AI_ASSISTANT', \"fact\": fact, 'score': 100, 'llm_response': 'skipping'})\n",
+    "    elif prev_label in TRUST_LABELS:\n",
+    "        entity_rows.append({\"name\": name, 'label': prev_label, \"fact\": fact, 'score': 100, 'llm_response': 'trusting prev label'})\n",
+    "        continue\n",
+    "        \n",
     "\n",
     "    label_choices = VALID_LABELS.copy()\n",
     "    random.shuffle(label_choices)\n",
@@ -281,7 +278,7 @@
     "    except AttributeError:\n",
     "        score = 0\n",
     "        \n",
-    "    entity_rows.append({\"name\": name, 'label': winner, \"fact\": fact, 'score': score})\n",
+    "    entity_rows.append({\"name\": name, 'label': winner, \"fact\": fact, 'score': score, 'llm_response': response})\n",
     "            \n",
     "with open('refined_labels.pkl', 'wb') as f:\n",
     "    pd.DataFrame(entity_rows).to_pickle(f)\n",
@@ -307,14 +304,27 @@
     "with open('refined_labels.pkl', 'rb') as f:\n",
     "    raw_entity_with_labels = pd.read_pickle(f)\n",
     "    \n",
-    "# facts and set of entities\n",
-    "facts_with_entities = raw_entity_with_labels.groupby(\"fact\")[\"name\"].apply(lambda x: set(x)).reset_index()\n",
-    "    \n",
-    "entity_names_and_labels_summed_scores = raw_entity_with_labels.groupby([\"name\", \"label\"])[\"score\"].sum().reset_index()\n",
+    "# normalize scores\n",
+    "min_score = raw_entity_with_labels['score'].min() -1\n",
+    "max_score = raw_entity_with_labels['score'].max()\n",
+    "raw_entity_with_labels['score'] = (raw_entity_with_labels['score'] - min_score) / (max_score - min_score)\n",
     "\n",
-    "# for each entity name, pick label with highest score\n",
-    "entity_with_labels = entity_names_and_labels_summed_scores.sort_values('score', ascending=False).drop_duplicates('name')\n",
-    "entity_with_labels = entity_with_labels.drop('score', axis=1).reset_index(drop=True)"
+    "\n",
+    "\n",
+    "entity_names_and_labels_summed_scores = raw_entity_with_labels.groupby([\"name\", \"label\"]).agg({\"score\":\"sum\"}).reset_index()\n",
+    "entity_name_total_scores = raw_entity_with_labels.groupby(\"name\")[\"score\"].sum().reset_index('name')\n",
+    "entity_name_counts = raw_entity_with_labels.groupby(\"name\")[\"label\"].count().reset_index('name')\n",
+    "\n",
+    "\n",
+    "merged_df = pd.merge(entity_names_and_labels_summed_scores, entity_name_total_scores, on='name', suffixes=('', '_total_by_name'))\n",
+    "merged_df = pd.merge(merged_df, entity_name_counts, on='name', suffixes=('', '_count_by_name'))\n",
+    "merged_df['confidence_score'] = merged_df['score'] / merged_df['score_total_by_name']\n",
+    "\n",
+    "# remove non-winners\n",
+    "entity_with_labels = merged_df.sort_values('confidence_score', ascending=False).drop_duplicates('name').reset_index()\n",
+    "\n",
+    "# # facts and set of entities\n",
+    "facts_with_entities = raw_entity_with_labels.groupby(\"fact\")[\"name\"].apply(lambda x: set(x)).reset_index()"
    ]
   },
   {
@@ -326,41 +336,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "evaluation relationship between Justina and Tom\n",
-      "{'entity_1': 'Justina', 'entity_2': 'Tom', 'relationship': 'IS_ROMANTIC_PARTNER_OF', 'fact': 'In late March 2024, Tom started working on personal vows for Justina, indicating an upcoming special occasion or a renewed commitment in their relationship.', 'score': 80}\n",
-      "evaluation relationship between Tom and Justina\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "12it [01:02,  5.25s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'entity_1': 'Tom', 'entity_2': 'Justina', 'relationship': 'IS_ROMANTIC_PARTNER_OF', 'fact': 'In late March 2024, Tom started working on personal vows for Justina, indicating an upcoming special occasion or a renewed commitment in their relationship.', 'score': 80}\n",
-      "evaluation relationship between Sam and Elroy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "from tqdm import tqdm\n",
@@ -405,6 +383,8 @@
     "\n",
     "resolved_entity_df = pd.DataFrame({\"name\": resolve_entities, \"label\": resolved_labels})\n",
     "\n",
+    "ENTITY_LABEL_CONFIDENCE_THRESHOLD = 0.7\n",
+    "\n",
     "relation_rows = []\n",
     "for _, row in tqdm(facts_with_entities.iterrows()):\n",
     "    fact = row['fact']\n",
@@ -419,6 +399,14 @@
     "                continue\n",
     "            label_1 = entity_with_labels[entity_with_labels[\"name\"] == entity_1][\"label\"].values[0]\n",
     "            label_2 = entity_with_labels[entity_with_labels[\"name\"] == entity_2][\"label\"].values[0]\n",
+    "            \n",
+    "            # confidence scores:\n",
+    "            score_1 = entity_with_labels[entity_with_labels[\"name\"] == entity_1][\"confidence_score\"].values[0]\n",
+    "            score_2 = entity_with_labels[entity_with_labels[\"name\"] == entity_2][\"confidence_score\"].values[0]\n",
+    "            \n",
+    "            if score_1 < ENTITY_LABEL_CONFIDENCE_THRESHOLD or score_2 < ENTITY_LABEL_CONFIDENCE_THRESHOLD:\n",
+    "                print(f'skipping {entity_1} and {entity_2} due to low confidence scores')\n",
+    "                continue\n",
     "            \n",
     "            relationship_choices = VALID_RELATIONSHIPS.get((label_1, label_2), [])\n",
     "            if len(relationship_choices) == 0:\n",
@@ -461,7 +449,7 @@
     "            except AttributeError:\n",
     "                score = 0\n",
     "                \n",
-    "            row = {\"entity_1\": entity_1, \"entity_2\": entity_2, \"relationship\": winner, 'fact': fact, 'score': score}\n",
+    "            row = {\"entity_1\": entity_1, \"entity_2\": entity_2, \"relationship\": winner, 'fact': fact, 'score': score, 'llm_response': response}\n",
     "            print(row)\n",
     "            relation_rows.append(row)\n",
     "\n",
@@ -475,10 +463,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# normalize scores and pick winners\n",
+    "with open('relationships.pkl', 'rb') as f:\n",
+    "    raw_relationships = pd.read_pickle(f)\n",
+    "    \n",
     "\n",
     "\n",
     "# check logic,\n",
@@ -486,7 +480,11 @@
     "# multiple romantic partners, romantic partners that are also a sibling, familial relationships\n",
     "\n",
     "\n",
-    "# need to hone by confidence score or something similar, not every fact is equally important"
+    "# need to hone by confidence score or something similar, not every fact is equally important\n",
+    "\n",
+    "# function to clarify relationship\n",
+    "\n",
+    "# maybe add uncertainty score?"
    ]
   }
  ],
