--- a/youbot/experiments/knowledge_base/11_llm_server/11.ipynb
+++ b/youbot/experiments/knowledge_base/11_llm_server/11.ipynb
@@ -323,6 +323,9 @@
     "# remove non-winners\n",
     "entity_with_labels = merged_df.sort_values('confidence_score', ascending=False).drop_duplicates('name').reset_index()\n",
     "\n",
+    "with open('entities_with_labels.pkl', 'wb') as f:\n",
+    "    entity_with_labels.to_pickle(f)\n",
+    "\n",
     "# # facts and set of entities\n",
     "facts_with_entities = raw_entity_with_labels.groupby(\"fact\")[\"name\"].apply(lambda x: set(x)).reset_index()"
    ]
@@ -349,16 +352,18 @@
     "\n",
     "VALID_RELATIONSHIPS = {\n",
     "    (\"PERSON\", \"PERSON\"): [\n",
-    "        \"IS_FRIEND_TO\",\n",
-    "        \"IS_RELATIVE_OF\",\n",
+    "        \"IS_PLATONIC_FRIEND_TO\",\n",
+    "        \"IS_SIBLING_OF\",\n",
+    "        \"IS_PARENT_OF\",\n",
+    "        \"IS_EXTENDED_RELATIVE_OF\",\n",
     "        \"IS_ROMANTIC_PARTNER_OF\",\n",
     "        \"IS_COWORKER_OF\",\n",
     "        \"FOLLOWS_IN_MEDIA\",\n",
     "        \"IS_SAME_PERSON_AS\",\n",
     "    ],\n",
     "    (\"PERSON\", \"PET\"): [\n",
-    "        \"IS_OWNER_OF\",\n",
-    "        \"TOOK_CARE_OF\",\n",
+    "        \"IS_PRIMARY_OWNER_OF\",\n",
+    "        \"TEMPORARILY_TOOK_CARE_OF\",\n",
     "    ],\n",
     "    (\"PERSON\", \"EVENT\"): [\n",
     "        \"ATTENDED\",\n",
@@ -463,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,18 +478,26 @@
     "with open('relationships.pkl', 'rb') as f:\n",
     "    raw_relationships = pd.read_pickle(f)\n",
     "    \n",
+    "min_score = raw_relationships['score'].min() -1\n",
+    "max_score = raw_relationships['score'].max()\n",
+    "raw_relationships['score'] = (raw_relationships['score'] - min_score) / (max_score - min_score)\n",
     "\n",
+    "# calculate winning classification and confidence score\n",
+    "relationship_names_and_labels_summed_scores = raw_relationships.groupby([\"entity_1\", \"entity_2\", \"relationship\"]).agg({\"score\":\"sum\"}).reset_index()\n",
+    "relationship_name_total_scores = raw_relationships.groupby([\"entity_1\", \"entity_2\"])[\"score\"].sum().reset_index()\n",
     "\n",
-    "# check logic,\n",
+    "relationship_names_and_labels_summed_scores['total_scores_for_entity_pair'] = relationship_names_and_labels_summed_scores.groupby([\"entity_1\", \"entity_2\"])['score'].transform('sum')\n",
     "\n",
-    "# multiple romantic partners, romantic partners that are also a sibling, familial relationships\n",
+    "relationship_names_and_labels_summed_scores['confidence_score'] = relationship_names_and_labels_summed_scores['score'] / relationship_names_and_labels_summed_scores['total_scores_for_entity_pair']\n",
     "\n",
+    "# finally, limit to winners only, keep confidence score\n",
+    "relationship_with_labels = relationship_names_and_labels_summed_scores.sort_values('confidence_score', ascending=False).drop_duplicates(['entity_1', 'entity_2']).reset_index()\n",
     "\n",
-    "# need to hone by confidence score or something similar, not every fact is equally important\n",
+    "# drop extraneous columns\n",
+    "relationship_with_labels = relationship_with_labels.drop(columns=['index', 'score', 'total_scores_for_entity_pair']).reset_index()\n",
     "\n",
-    "# function to clarify relationship\n",
-    "\n",
-    "# maybe add uncertainty score?"
+    "with open('relationships_with_labels.pkl', 'wb') as f:\n",
+    "    relationship_with_labels.to_pickle(f)\n"
    ]
   }
  ],
