--- a/youbot/experiments/knowledge_base/entity_resolution_with_llm_server/notebook.ipynb
+++ b/youbot/experiments/knowledge_base/entity_resolution_with_llm_server/notebook.ipynb
@@ -55,7 +55,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
+    "import logging\n",
+    "from openai import OpenAI\n",
     "\n",
     "CONFIG_CONTENT = \"\"\"\n",
     "\n",
@@ -80,7 +81,31 @@
     "\n",
     "DATA_SOURCE_DIR = \"\"\n",
     "\n",
-    "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\""
+    "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
+    "\n",
+    "logging.basicConfig(filename='notebook.log',\n",
+    "                    filemode='a',\n",
+    "                    format='%(asctime)s,%(msecs)d %(name)s %(levelname)s %(message)s',\n",
+    "                    datefmt='%H:%M:%S',\n",
+    "                    level=logging.DEBUG)\n",
+    "\n",
+    "\n",
+    "# os.environ[\"OPENAI_BASE_URL\"] = \"http://localhost:1234/v1\"\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = \"lm-studio\"\n",
+    "client = OpenAI()\n",
+    "model = client.models.list().data[0].id\n",
+    "\n",
+    "model = 'gpt-3.5-turbo-instruct'\n",
+    "def get_openai_response(prompt: str) -> str:\n",
+    "    if model == 'gpt-3.5-turbo-instruct':\n",
+    "        response = client.completions.create(model=model, prompt= prompt).choices[0].text        \n",
+    "    else:\n",
+    "        response = client.completions.create(model=model, messages=[{\"role\": \"user\", \"content\": prompt}]).choices[0].message.content\n",
+    "        \n",
+    "    assert response\n",
+    "    assert type(response) == str\n",
+    "    return response\n",
+    "        \n"
    ]
   },
   {
@@ -118,7 +143,8 @@
     "    nlp = assemble(config)\n",
     "except OSError:\n",
     "    spacy.cli.download(model_name)\n",
-    "    nlp = assemble(config)\n",
+    "    print(\"restart and rerun!\")\n",
+    "    exit()\n",
     "\n",
     "# set log level to stream to STDOUT\n",
     "spacy_llm.logger.addHandler(logging.StreamHandler())\n",
@@ -192,10 +218,11 @@
     "import random\n",
     "\n",
     "\n",
-    "os.environ[\"OPENAI_BASE_URL\"] = \"http://localhost:1234/v1\"\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"lm-studio\"\n",
+    "# os.environ[\"OPENAI_BASE_URL\"] = \"http://localhost:1234/v1\"\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = \"lm-studio\"\n",
     "client = OpenAI()\n",
-    "model = client.models.list().data[0].id\n",
+    "# model = client.models.list().data[0].id\n",
+    "model = 'gpt-3.5-turbo-instruct'\n",
     "\n",
     "VALID_LABELS = [\n",
     "    \"PERSON\",\n",
@@ -248,9 +275,8 @@
     "    Then should follow with a short explanation of your reasoning.\n",
     "    \"\"\"\n",
     "\n",
-    "    response = client.chat.completions.create(model=model, messages=[{\"role\": \"user\", \"content\": prompt}]).choices[0].message.content\n",
-    "    assert response\n",
-    "    print(f\"***\\nname: {name}\\n\\nfact: {fact}\\n\\nresponse: {response}\\n\\n***\\n\")\n",
+    "    response = get_openai_response(prompt)\n",
+    "    logging.info(f\"***\\nname: {name}\\n\\nfact: {fact}\\n\\nresponse: {response}\\n\\n***\\n\")\n",
     "\n",
     "    # whichever label appears first wins\n",
     "    winner = \"None\"\n",
@@ -272,6 +298,13 @@
     "with open(\"refined_labels.pkl\", \"wb\") as f:\n",
     "    pd.DataFrame(entity_rows).to_pickle(f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -328,6 +361,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import re\n",
     "from tqdm import tqdm\n",
@@ -359,10 +406,7 @@
     "    (\"EVENT\", \"DATE\"): [\"OCCURED_ON\"],\n",
     "}\n",
     "\n",
-    "os.environ[\"OPENAI_BASE_URL\"] = \"http://localhost:1234/v1\"\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"lm-studio\"\n",
-    "client = OpenAI()\n",
-    "model = client.models.list().data[0].id\n",
+    "\n",
     "\n",
     "resolve_entities = pd.read_pickle(\"refined_labels.pkl\")[\"name\"]\n",
     "# first element in the tuple is the label\n",
@@ -392,14 +436,14 @@
     "            score_2 = entity_with_labels[entity_with_labels[\"name\"] == entity_2][\"confidence_score\"].values[0]\n",
     "\n",
     "            if score_1 < ENTITY_LABEL_CONFIDENCE_THRESHOLD or score_2 < ENTITY_LABEL_CONFIDENCE_THRESHOLD:\n",
-    "                print(f\"skipping {entity_1} and {entity_2} due to low confidence scores\")\n",
+    "                logging.info(f\"skipping {entity_1} and {entity_2} due to low confidence scores\")\n",
     "                continue\n",
     "\n",
     "            relationship_choices = VALID_RELATIONSHIPS.get((label_1, label_2), [])\n",
     "            if len(relationship_choices) == 0:\n",
     "                continue\n",
     "\n",
-    "            print(f\"evaluation relationship between {entity_1} and {entity_2}\")\n",
+    "            logging.info(f\"evaluation relationship between {entity_1} and {entity_2}\")\n",
     "\n",
     "            random.shuffle(relationship_choices)\n",
     "\n",
@@ -417,11 +461,7 @@
     "            A score from 1 to 100 should follow. 100 means you are very confident in your choice, 1 means you are not confident at all.\n",
     "            Then it should follow with a short explanation of your reasoning.\n",
     "            \"\"\"\n",
-    "\n",
-    "            response = (\n",
-    "                client.chat.completions.create(model=model, messages=[{\"role\": \"user\", \"content\": prompt}]).choices[0].message.content\n",
-    "            )\n",
-    "            assert response\n",
+    "            response = get_openai_response(prompt)\n",
     "\n",
     "            # first choice to appear in response wins\n",
     "            winner = None\n",
@@ -446,7 +486,6 @@
     "                \"score\": score,\n",
     "                \"llm_response\": response,\n",
     "            }\n",
-    "            print(row)\n",
     "            relation_rows.append(row)\n",
     "\n",
     "relation_df = pd.DataFrame(relation_rows)\n",
@@ -456,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
